# SioConv

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  training.py
configs/: config.yaml
configs/experiment/: band_transformer_wiki_cont.yaml  dlb_test.yaml  dmt_wiki_cont.yaml  dmt_wiki_ja_cont.yaml  neural_memory_natsume.yaml  quasi_lstm_natsume.yaml  sconv_default.yaml  sconv_lti.yaml  sconv_mh.yaml  sconv_mh_chat.yaml  sconv_mh_large.yaml  sconv_mh_minipile_wiki_ja.yaml  sconv_mh_minipile_wiki_ja_large.yaml  sconv_mh_minipile_wiki_ja_middle.yaml  sconv_mh_minipile_wiki_ja_middle_continuous.yaml  sconv_mh_minipile_wiki_ja_test.yaml  sconv_mh_wiki_ja.yaml  sioconv_memory_natsume.yaml  sioconv_minipile_wiki_ja.yaml  sioconv_weight_test.yaml  sioconvps_chat.yaml  sioconvps_minipile_wiki_ja.yaml  sioconvps_wiki_en_ja.yaml  sioconvps_wiki_en_ja_chat.yaml  sioconvrs_natsume.yaml
configs/model/: band_tr.yaml  dlb_test.yaml  dmt.yaml  neural_memory.yaml  neural_memory_test.yaml  quasi_lstm_test.yaml  sconv.yaml  sconv_lti.yaml  sconv_mh.yaml  sconv_mh_large.yaml  sconv_mh_middle.yaml  sconv_mh_test.yaml  sioconv.yaml  sioconv_memory_test.yaml  sioconvps.yaml  sioconvrs_test.yaml
configs/predict/: default.yaml
configs/tokenizer/: default.yaml  elyza.yaml
configs/train/: default.yaml
sconv/src/: main.py  predict.py  spiral_conv.py
src/: helper.py  predict.py  predict_chat.py  schedular.py  scheduler.py  text_loader.py  train.py
src/model/: band_transformer.py  diffusion_memory_transformer.py  dlb.py  neural_memory.py  (+9 more)
(+14 files in other folders)
